# Pi-Monte-Carlo-Benchmark

./: .gitignore  1trln-bench.md  README.md  compilation-keys.txt  old_windows_results.md  wishlist.txt
Ada/: build.sh  main  main.adb  main.ali  result.txt
Beef/: BeefProj.toml  BeefSpace.toml  BeefSpace_User.toml  build.sh  result.txt
C/: Makefile  build-new.sh  build.sh  main-ver2.c  main.c  result-1kk-gsl.txt  result-comparion-gsl.txt  result-comparion.txt  result.txt
Cpp/: build.sh  main.cpp  result-1kk.txt  result.txt
Crystal/: build.sh  crystal.cr  main  main.cr  result.txt
Csharp/: Program.cs  build.sh  result.txt
D/: build.sh  main  main.d  result.txt
Dart/: build.sh  main.dart  result.txt
Elixir/: build.sh  main.ex
F#/: F#.fsproj  Program.fs
Fortran/: build.sh  main.f90  result.txt
Fsharp/: Program.fs  result.txt
Go/: build.sh  main  main.go  result.txt
Haskell/: CHANGELOG.md  Haskell.cabal  build.sh  haskell.cabal  package.yaml  stack.yaml
Haskell/app/: Main.hs
Haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell/src/: Main.hs
Java/: build.sh  result.txt
JavaScript/: main.js  result.txt
Julia/: build.sh  main.jl  result.txt  v1_raw.jl  v2_libs.jl
Kotlin/: build.sh  program.kexe  result.txt
KotlinJVM/: build.sh  result.txt
Nim/: build.sh  main  main.nim  result.txt
Odin/: build.sh  main.odin  result.txt
Pascal/: build.sh  main  main.pas  (+1 more)
Rust/: Cargo.toml  build.sh  result-1kk.txt  result-new.txt  result.txt
Rust/src/: main.rs
(+49 files in other folders)
