name:                haskell
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable haskell-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O2
                       -fllvm
                       -optlo-O3
                       -funfolding-use-threshold1000
                       -funfolding-keeness-factor1000

