[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'
debug-assertion = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-unlits = 1
rpath = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1


